[gd_scene load_steps=2 format=3 uid="uid://b132y6ci7nud"]

[ext_resource type="Script" path="res://Scripts/play_menu.gd" id="1_xoof0"]

[node name="PlayMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xoof0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.5
offset_right = 20.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxTitle" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 90

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxTitle"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxTitle"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Play Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxButton" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 4

[node name="CreateGame" type="Button" parent="Panel/MarginContainer/VBoxButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Create game"

[node name="JoinLanGame" type="Button" parent="Panel/MarginContainer/VBoxButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "  Join Lan Game  "

[node name="Back" type="Button" parent="Panel/MarginContainer/VBoxButton"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Back
"

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 380

[node name="Label" type="Label" parent="Panel/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Multiplayer
Implementation"

[connection signal="pressed" from="Panel/MarginContainer/VBoxButton/CreateGame" to="." method="_on_create_game_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxButton/JoinLanGame" to="." method="_on_join_lan_game_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxButton/Back" to="." method="_on_back_pressed"]
